[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/Player/HUD/Debug/DebugWindow.gd" type="Script" id=1]
[ext_resource path="res://menus/Themes/default.tres" type="Theme" id=2]

[node name="DebugWindow" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -640.0
margin_bottom = 360.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -194.0
margin_bottom = 277.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 188.0
margin_bottom = 312.0
color = Color( 0, 0, 0, 0.501961 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 188.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 182.0
margin_bottom = 35.0

[node name="HealthLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 35.0
text = "Health: "

[node name="Health" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 137.0
margin_bottom = 35.0
text = "0123546"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 182.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 42.0
margin_bottom = 35.0
text = "Fuel:"

[node name="Fuel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 46.0
margin_right = 114.0
margin_bottom = 35.0
text = "0123546"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 182.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 62.0
margin_bottom = 35.0
text = "Money:"

[node name="Money" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 66.0
margin_right = 134.0
margin_bottom = 35.0
text = "0123546"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 182.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
margin_right = 58.0
margin_bottom = 35.0
text = "Speed:"

[node name="Speed" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
margin_left = 62.0
margin_right = 130.0
margin_bottom = 35.0
text = "0123546"

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 182.0
margin_bottom = 191.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
margin_right = 101.0
margin_bottom = 35.0
text = "Chunk count"

[node name="ChunkCount" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
margin_left = 105.0
margin_right = 173.0
margin_bottom = 35.0
text = "0123546"

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 182.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
margin_right = 110.0
margin_bottom = 35.0
text = "CentralChunk"

[node name="CentralChunk" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer6"]
margin_left = 114.0
margin_right = 182.0
margin_bottom = 35.0
text = "0123546"

[node name="HBoxContainer7" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 182.0
margin_bottom = 269.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer7"]
margin_right = 91.0
margin_bottom = 35.0
text = "Player pos:"

[node name="PlayerPos" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer7"]
margin_left = 95.0
margin_right = 163.0
margin_bottom = 35.0
text = "0123546"

[node name="HBoxContainer8" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 182.0
margin_bottom = 308.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer8"]
margin_right = 40.0
margin_bottom = 35.0
text = "FPS:"

[node name="FPS" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer8"]
margin_left = 44.0
margin_right = 112.0
margin_bottom = 35.0
text = "0123546"
